fix(search-bar): button disabled + contrasted

--- a/packages/stencil/components/search-bar/src/components/osds-search-bar/osds-search-bar.scss
+++ b/packages/stencil/components/search-bar/src/components/osds-search-bar/osds-search-bar.scss
@@ -36,8 +36,13 @@
   }
 }
 
-:host([disabled]) {
-  cursor: not-allowed;
+:host([contrasted]) {
+  osds-button {
+    &::part(button) {
+      border: solid var(--ods-size-01) var(--ods-color-primary-200);
+      border-left: 0;
+    }  
+  }
 }
 
 // apply the theme template for the component
